--- a/contact-app/src/styling/layout.css
+++ b/contact-app/src/styling/layout.css
@@ -1,17 +1,18 @@
 /* layout.css */
 
 .main {
-    background-color: '#f9fafb'; 
-    min-height: '100vh';
-    padding-top: 80px;
-  }
+  background-color: #f9fafb; 
+  min-height: 100vh;
+  padding-top: 80px;
+}
 
   body {
-    background-color: #f5f6fa;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f5f6fa;
 }
+
 
   .ui-input {
     padding: '10px';
@@ -24,7 +25,7 @@
   }
 
   .sidebar {
-    width: 220px;
+    width: 15rem;
     background-color: #fff;
     height: 100vh;
     padding: 2rem 1rem;
